force-app/main/default/objects/skilljar__Path_Item__c/skilljar__Path_Item__c.object-meta.xml
<CustomObject>
    <label>Path Item</label>
    <nameField>
        <label>Path Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Path Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>