force-app/main/default/objects/skilljar__Path_Item__c/fields/skilljar__Course__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>skilljar__Course__c</referenceTo>
    <relationshipLabel>Path Items</relationshipLabel>
    <relationshipName>Path_Items</relationshipName>
    <type>Lookup</type>
</CustomField>