force-app/main/default/objects/skilljar__Path_Item__c/fields/skilljar__Order__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Order__c</fullName>
    <label>Order</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>